* encoding.c (rb_find_encoding): new function find encoding from   arbitrary object as a pointer to rb_encoding, and return NULL if   not found. * io.c (io_encoding_set): just warn unsupported encodings, but not   exception.  [ruby-core:40726] [Bug #5567]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@34986 b2dd03c8-39d4-4d8f-98ff-823fe69b080e